syntax = "proto3";

option go_package = "/protobuf";

message Message {
  string type = 1;
  bytes id = 2;
  uint32 sender = 3;
  bytes data = 4;
}

/*FP使用的消息类型
message Propose{
  repeated string txs = 1;
  bytes unknown = 2;
}
message VotePropose{
  bytes unknown = 1;
}
message Commit{
  bytes unknown = 1;
}
message VoteCommit{
  bytes unknown = 1;
}
message Execute{
  bytes unknown = 1;
}
message CrossPropose{
  repeated string txs = 1;
  bytes unknown = 2;
}
message CrossCommit{
  bytes unknown = 1;
}
message CrossExecute{
  bytes unknown = 1;
}
*/

//Chamael-2pHotstuff使用的消息类型
message New_View{
  bytes none = 1;
}
message Prepare{
  repeated string txs = 1;
}
message Prepare_Vote{
  uint32 vote = 1;
  bytes sig = 2;
}
message Precommit{
  bytes aggsig = 1;
  bytes aggpk = 2;
}
message Precommit_Vote{
  uint32 vote = 1;
  bytes sig = 2;
}
message Commit{
  bytes aggsig = 1;
  bytes aggpk = 2;
}

//Chamael-kronos使用的消息类型
message TXs_Inform{
  repeated string txs = 1;
}
message Sig_Inform{
  bytes none = 1;
}
message Sigmsg{
  bytes root = 1;
  bytes sig = 2;
}
message InputBFT_Result{
  repeated string txs = 1;
  bytes root = 2;
  repeated bytes path = 3;
  repeated int64 indicator =4;
  bytes aggsig = 5;
  bytes aggpk = 6;
}

